--- a/mongo.yaml
+++ b/mongo.yaml
@@ -1,16 +1,16 @@
-version: '3'
+version: "3"
 services:
-  mongodb: 
+  mongodb:
     image: mongo
-    port:
+    ports:
       - 27017:27017
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=password
-  mongo-express: 
+  mongo-express:
     image: mongo-express
-    port:
-      - 27017:27017
+    ports:
+      - 8080:8081
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
       - ME_CONFIG_MONGODB_ADMINPASSWORD=password
